# routes/index.js
@@ -9,5 +9,6 @@ router.get('/', (req, res) => {
 
 router.use('/pets', require('./pets'));
 router.use('/owners', require('./owners'));
+router.use('/appointments', require('./appointments'));
 
 module.exports = router;
